--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -17,18 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "bbd948cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
-    "from transformers import pipeline"
+    "from transformers import pipeline, AutoTokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "id": "632df196",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "caa827ef",
    "metadata": {},
    "outputs": [],
@@ -54,66 +54,69 @@
     "model_name = \"klue/bert-base\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "\n",
-    "model = BertForTokenClassification.from_pretrained(\"./model/model/\")\n",
+    "model = BertForTokenClassification.from_pretrained(\"./model/model\")\n",
     "p = pipeline(\"token-classification\", model=model, tokenizer=tokenizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "id": "c0d66e32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test = '경찰은 또 성매매 알선 자금을 관리한 박씨의 딸(32)과 성매매 여성 김모(33)씨 등 16명을 같은 혐의로 불구속 입건했다.'\n",
-    "test = \"하지만 이영화에는 감히 별 5개를 주고싶다\""
+    "test = '경찰은 또 성매매 알선 자금을 관리한 박씨의 딸(32)과 성매매 여성 김모(33)씨 등 16명을 같은 혐의로 불구속 입건했다.'\n",
+    "# test = \"하지만 이영화에는 감히 별 5개를 주고싶다\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "bd3cf546",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'하지만 이영화에는 감히 별 <5개:QT>를 주고싶다'"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "klue[2][\"sentence\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "id": "28ac8cca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'entity': 'IT',\n",
-       "  'score': 0.999278,\n",
-       "  'index': 8,\n",
-       "  'word': '5',\n",
-       "  'start': 15,\n",
-       "  'end': 16},\n",
-       " {'entity': 'IT',\n",
-       "  'score': 0.9983327,\n",
-       "  'index': 9,\n",
-       "  'word': '##개',\n",
-       "  'start': 16,\n",
-       "  'end': 17}]"
+       "[{'entity': 'B-PS',\n",
+       "  'score': 0.99731004,\n",
+       "  'index': 10,\n",
+       "  'word': '박',\n",
+       "  'start': 21,\n",
+       "  'end': 22},\n",
+       " {'entity': 'B-QT',\n",
+       "  'score': 0.9860001,\n",
+       "  'index': 15,\n",
+       "  'word': '32',\n",
+       "  'start': 27,\n",
+       "  'end': 29},\n",
+       " {'entity': 'B-PS',\n",
+       "  'score': 0.99655485,\n",
+       "  'index': 20,\n",
+       "  'word': '김',\n",
+       "  'start': 39,\n",
+       "  'end': 40},\n",
+       " {'entity': 'B-QT',\n",
+       "  'score': 0.9827323,\n",
+       "  'index': 23,\n",
+       "  'word': '33',\n",
+       "  'start': 42,\n",
+       "  'end': 44},\n",
+       " {'entity': 'B-QT',\n",
+       "  'score': 0.99677116,\n",
+       "  'index': 27,\n",
+       "  'word': '16',\n",
+       "  'start': 49,\n",
+       "  'end': 51},\n",
+       " {'entity': 'I-QT',\n",
+       "  'score': 0.99946636,\n",
+       "  'index': 28,\n",
+       "  'word': '##명',\n",
+       "  'start': 51,\n",
+       "  'end': 52}]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
